# rs_opengl

./: .gitignore  Cargo.toml  README.md  copy_resources.ps1
resources/: test.txt
resources/models/: cone.gltf  cube.gltf  cylinder.gltf  icosphere.gltf  planet.gltf  space_ship.gltf  sphere.gltf  suzanne.gltf  suzanne_2.gltf  test_scene.gltf  torus.gltf
resources/program/: program_info.txt
resources/scenes/: test_scene_with_lights.gltf
resources/shaders/: blinn-phong.shader  cube.shader  default.shader  fallback.shader  flat.shader  fog.shader  light.shader  model.shader  transparency.shader  triangle.frag  triangle.shader  triangle.vert
src/: c_string.rs  camera.rs  cstr.rs  debugging.rs  input.rs  light.rs  main.rs  mesh.rs  opengl_fn.rs  shader.rs  texture.rs  time.rs  transform.rs
src/geometry/: mesh.rs  mod.rs
src/graphics/: camera.rs  light.rs  material.rs  mesh.rs  mod.rs  model.rs  shader.rs  texture.rs  uniform.rs  vertex.rs
src/resources/: image_loader.rs  mod.rs  obj_loader.rs  shader_loader.rs
src/shaders/: mod.rs
