[package]
name = "opengl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmath = "0.2.4"
sdl2 = { version = "0.35.2", features = [ "bundled", "static-link" ] }
gl = "0.14.0"
wavefront_obj_importer = { path = "./lib/obj_importer" }
image = "0.24.2"