[package]
name = "opengl"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmath = { path = "W:/rs/fmath" }
sdl2 = { version = "0.35.2", features = [ "bundled", "static-link" ] }
gl = "0.14.0"
image = "0.24.2"